mixer/test/client/rbac_permissive_policy/config.conf.20248.yaml

admin:
  access_log_path: /tmp/envoy-access.log
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 20248
static_resources:
  clusters:
  - name: backend
    connect_timeout: 5s
    type: STATIC
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 20250
  - name: loop
    connect_timeout: 5s
    type: STATIC
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 20246
  - name: mixer_server
    http2_protocol_options: {}
    connect_timeout: 5s
    type: STATIC
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 20249
    circuit_breakers:
      thresholds:
      - max_connections: 10000
        max_pending_requests: 10000
        max_requests: 10000
        max_retries: 3
  listeners:
  - name: server
    address:
      socket_address:
        address: 127.0.0.1
        port_value: 20246
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: AUTO
          stat_prefix: inbound_http
          access_log:
          - name: envoy.file_access_log
            config:
              path: /tmp/envoy-access.log
          http_filters:
          
          - name: envoy.filters.http.rbac
            config:
              rules:
                policies: {}
              shadow_rules:
                policies:
                  details-reviews-viewer:
                    permissions:
                    - and_rules:
                        rules:
                        - or_rules:
                            rules:
                            - header:
                                name: ":method"
                                exact_match: GET
                    principals:
                    - any: true
          
          - name: mixer
            config: {"service_configs":{":default":{"mixer_attributes":{"attributes":{"mesh2.ip":{"bytes_value":"AAAAAAAAAAAAAP//zJi9dA=="},"target.name":{"string_value":"target-name"},"target.user":{"string_value":"target-user"}}}}},"default_destination_service":":default","mixer_attributes":{"attributes":{"mesh1.ip":{"bytes_value":"AQEBAQ=="},"target.namespace":{"string_value":"XYZ222"},"target.uid":{"string_value":"POD222"}}}}
          - name: envoy.router
          route_config:
            name: backend
            virtual_hosts:
            - name: backend
              domains: ["*"]
              routes:
              - match:
                  prefix: /
                route:
                  cluster: backend
                  timeout: 0s
                per_filter_config:
                  mixer: {"mixer_attributes":{"attributes":{"mesh2.ip":{"bytes_value":"AAAAAAAAAAAAAP//zJi9dA=="},"target.name":{"string_value":"target-name"},"target.user":{"string_value":"target-user"}}}}
  - name: client
    address:
      socket_address:
        address: 127.0.0.1
        port_value: 20245
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: AUTO
          stat_prefix: outbound_http
          access_log:
          - name: envoy.file_access_log
            config:
              path: /tmp/envoy-access.log
          http_filters:
          - name: mixer
            config: {"forward_attributes":{"attributes":{"source.namespace":{"string_value":"XYZ11"},"source.uid":{"string_value":"POD11"}}}}
          - name: envoy.router
          route_config:
            name: loop
            virtual_hosts:
            - name: loop
              domains: ["*"]
              routes:
              - match:
                  prefix: /
                route:
                  cluster: loop
                  timeout: 0s
  - name: tcp_server
    address:
      socket_address:
        address: 127.0.0.1
        port_value: 20247
    filter_chains:
    - filters:
      - name: mixer
        config: {"mixer_attributes":{"attributes":{"mesh1.ip":{"bytes_value":"AQEBAQ=="},"target.namespace":{"string_value":"XYZ222"},"target.uid":{"string_value":"POD222"}}}}
      - name: envoy.tcp_proxy
        config:
          stat_prefix: inbound_tcp
          cluster: backend
